[project]
name = "weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.52.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "tabulate>=0.9.0",
]

[tool.uv.workspace]
members = [
    "temp",
]
